style.css
/* STYLESHEET STARTS HERE */

html, body {
  height: 100%;
}

body {
  margin: 0;
  min-width: 320px;

}

* {
  box-sizing: border-box;
  color: #595959;
}

/* HEADER */
/* ========================================================================= */
header {
  background: #fff;
  position: fixed;
  width: 100%;
  height: 65px;
  z-index: 999;
  top: 0;
  border-bottom: 1px dotted grey;
}

.header-outer-inner {
  display: table;
  width: 100%;

}

.header-inner {
  display: table-row;
  min-width: 100%;
  /*background: yellow;*/
}

.header-logo,
.header-info,
nav {
  display: table-cell;
  /*background: purple;*/
  vertical-align: middle;
  color: #595959;
}

.header-logo {
  width: 5%;
}

.header-info {
  width: 50%;
}

  .header-info-name {
    /*width: 25%;*/
    height: 50%;
    padding-left: 10px;
  }

  .header-info-number {
    /*width: 25%;*/
    height: 50%;
    padding-left: 10px;
    display: none;
  }


@media (min-width: 768px) {
  .header-info-number {
    display: block;
  }
}
/* NAVIGATION */
/* ========================================================================= */
/* nav.css

/* FOOTER */
/* ========================================================================= */
.footer {
  min-height: 60px;
  border-top: grey solid 1px;
  display: flex;
}

.footer-copyright {
  text-align: center;
  justify-content: center;
}

/* Content Alignment Containers */
/* ========================================================================= */
.page-container {
  width: 100%;
  /*background-color: yellow;*/
  min-height: 100%;
}

.header-content-container {
  max-width: 80%;
  margin: auto;
  padding: 10px 0 10px 0;
  /*position: relative;*/
  /*background: orange;*/
  /*z-index: 2000;*/
}

.content-container {
  /*background: pink;*/
  max-width: 80%;
  margin: auto;
  height: 100%;
}


.body-content-container {
  background: green;
  min-height: 100vh;
}


/* section height setups*/
#fp-section1 {
  height: 80vh;
  width: 100%;
  /*background-color: red;*/
  background: url('assets/mw_hp_background.jpg');

  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: right top;

}

.fp-section1-opacity {
  background-color: rgba(128, 128, 128, 0.15);
  height: 100%;
}

.fp-section-1-text {
  padding-top: 100px;
}


#fp-section2 {
  min-height: 40vh;
  width: 100%;
  /*background-color: blue;*/
  padding: 20px 0 20px 0;
}

#fp-section3 {
  min-height: 80vh;
  width: 100%;
  /*background-color: pink;*/
  border-top: solid 1px grey;
  text-align: center;
  padding: 20px 0 20px 0;
}



/* FP Section 2 Styles */
/* ========================================================================= */
.a {
  /*background: yellow;*/
  font-size: 3em;
}

.b {
  /*background: pink;*/
}

.c {
  /*background: orange;*/
  font-size: 2em;
  padding: 10px 0 10px 0;


}

.d {
  /*background: teal;*/
  padding: 10px 0 10px 0;

}
.fp-s2-table {
  display: table;
  width: 100%;
  text-align: center;
  /*background: green;*/
  min-height: 40vh;
}

.fp-s2-table-row {
  display: table-row;
  text-align: center;
  /*background: purple;*/
  min-height: 200px;
  width: 100%;
  display: block;
}

.fp-s2-table-cell {
  display: table-cell;
  text-align: center;
  min-width: 100%;
  display: inline-block;
  /*background: grey;*/
  /*padding: 10px 0 10px 0;*/
}

.hp-icon {
  height: 150px;
}


/* FP section 3 styles - ABOUT */
/* ========================================================================= */

/*header */
.about-header {
  font-size: 3em;
}

/* blurb */
.about-blurb {
}

/* section content container */
.about-content-container {
  display: table;
  width: 100%;
  height: 100%;
  margin-bottom: 20px;
}

.about-content-container-inner {
  display: table-row;
  height: 100%;
  background: pink;
}

.about-img-container,
.about-text-container {
  display: table-cell;
  vertical-align: middle;
  width: 100%;
  height: 100%;
  float: left;
  clear: both;
}

@media(min-width: 992px) {
  .about-img-container,
  .about-text-container {
    width: 50%;
    float: none;
    clear: none;
    height: 100%;
  }
}

.about-text-table {
  display: table;
  background: rebeccapurple;
  height: 100%;
}

/* About image */
.about-img {
  width: 100%;
  height: 100%;
}

/* About text */
.about-text-row {
  display: table-row;
  background: orange;
  height: 25%;
}

.about-text-bullet,
.about-text-copy {
  display: table-cell;
  vertical-align: middle;
  padding: 10px;
}

.about-text-bullet {
  width: 10%;
  text-align: center;
  padding-left: 10px;
}

@media(min-width: 992px) {
  .about-text-bullet {
    padding-left: 40px;
  }
}

.about-text-copy {
  width: 90%;
  text-align: left;
}

/* About section slideshow */
.fp-section-3-test-slide {
  background: yellow;
}


/* UNIVERSAL PAGE STYLES */
/* ========================================================================= */
.page-banner-img {
  height: 40vh;
  background: url('assets/mw_hp_background.jpg');

  /*background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: right top;*/
}

.page-header-text {
  font-size: 4em;
  text-align: center;
  padding: 30px 0 10px 0;
}

.page-blurb {
  text-align: center;
  margin-bottom: 30px;
  font-size: 1.1em
}

/* SERVICES PAGE */
/* ========================================================================= */
.services-content-container {
  background: pink;
  width: 100%;
  display: table;
}

@media(min-width: 768px) {
  .services-content-container {
    min-height: 150vh;
  }
}

.services-content-section {
  background: grey;
  /*border: 10px solid red;*/
  height: 33.3%;
  width: 100%;
  display: table-row;
}

.services-img {
  display: table-cell;
  background: yellow;
  min-height: 100%;
  width: 100%;
  vertical-align: middle;
  text-align: center;
  float: left;
  clear: both;
}

.services-text {
  display: table-cell;
  background: teal;
  width: 100%;
  vertical-align: middle;
  text-align: center;
  float: left;
  clear: both;
}

@media(min-width: 768px) {
  .services-img {
    width: 40%;
    float: none;
    clear: none;
    min-height: 100%;
  }
  .services-text {
    width: 60%;
    float: none;
    clear: none;
    min-height: 100%;
  }
}


/* FAQ PAGE */
/* ========================================================================= */


/* CONTACT PAGE */
/* ========================================================================= */

/*.daisy {
  color: blue;
  font-size: 2em;
}

#inputfield {
  border: solid 1px green;
  border-radius: 50px;
font-size: 1em;
}*/

.wpcf7 {
  background: yellow;
}

.wpcf7 p {
  margin: 0;
}

.wpcf7 label {
  color: red;
  /*padding: 10px;*/
}
.wpcf7 input[type="text"],
.wpcf7 input[type="email"],
.wpcf7 textarea {
  background: red;
  border: 1px solid #7bc9b7;
  border-radius: 5px;
  padding: 10px;
  width: 100%;
}


/* DEV STYLES */
/* ========================================================================= */

/*.header-logo {
  background: white;
}*/

